# NFC-777-05

./: .gitignore  version_inc.py
doc/ТЗ/: Распиновка.txt  ТЗ.txt
doc/ТЗ/1.777.05_E3_new/: 777.5.sch
doc/ТЗ/1.799.2E3_old/: 799.2.sch
sources/: CMakeLists.txt  NFC-777-05.uvmpw  RD330X.uvmpw  Описание.txt
sources/Loader/: CMakeLists.txt  Loader.uvprojx
sources/Loader-799/: Loader-799.uvoptx  Loader-799.uvprojx
sources/Loader-799/src/: main.cpp
sources/Loader-799/src/Hardware/: hrd_Iap.cpp
sources/Loader/src/: config.h  fmw.cpp
sources/Loader/src/Hardware/CMSIS/: startup_gd32e23x.s  system_gd32e23x.c
sources/Loader/src/Hardware/HAL/: HAL_PINS.cpp
sources/Reader/: CMakeLists.txt  Demo-799.uvoptx  Demo-799.uvprojx  Reader-20kB.sct  Reader-771.uvoptx  Reader-771.uvprojx  Reader-777.uvoptx  Reader-777.uvprojx  Reader-799.uvoptx  Reader-799.uvprojx  Reader-8kB.sct  Reader.uvprojx
sources/Reader/src/: Types.h  defines.h  main.cpp  opt.h
sources/Reader/src/Communicator/: AnswersOSDP.cpp  AnswersOSDP.h  Communicator.cpp  Communicator.h  OSDP.cpp  OSDP.h  OSDP_custom.cpp  ROMWriter.cpp  ROMWriter.h
sources/Reader/src/Device/: Device.cpp  Device.h  DeviceInfo.cpp  DeviceStartState.cpp
sources/Reader/src/Hardware/: Power.cpp  Power.h  Timer.cpp  Timer.h
sources/Reader/src/Hardware/CMSIS/: startup_gd32e23x.s  system_stm32f1xx.c
sources/Reader/src/Hardware/HAL/: HAL.h  HAL_FLASH.cpp  HAL_USART.cpp  HAL_USART_opt.cpp
sources/Reader/src/Hardware/HAL/GD/: HAL_ADC_gd.cpp  HAL_IT_PB2_gd.cpp  HAL_IT_gd.cpp  HAL_PINS_gd.cpp  HAL_SPI_gd.cpp  HAL_gd.cpp
sources/Reader/src/Hardware/HAL/STM/: HAL_ADC_stm.cpp  HAL_ROM_stm.cpp  HAL_stm.cpp
sources/Reader/src/Modules/Indicator/: ColorLED.h  Indicator.cpp  Indicator.h  SwitchTemperatureIndicator.cpp  SwitchTemperatureIndicator.h
sources/Reader/src/Modules/Indicator/Scripts/: ScriptsLED.cpp  ScriptsLED.h  StepScript.cpp  StepScript.h
sources/Reader/src/Modules/Indicator/WS2812B/: WS2812B.cpp  WS2812B.h
sources/Reader/src/Modules/LIS2DH12/: LIS2DH12.cpp  LIS2DH12.h
sources/Reader/src/Modules/Memory/: Memory.cpp  Memory.h
sources/Reader/src/Modules/Player/: Player.h  TableSounds.h
sources/Reader/src/Modules/Player/GD/: Player_gd.cpp
sources/Reader/src/Modules/Player/STM/: Player_stm.cpp  Sounds_stm.h
sources/Reader/src/Modules/Sensor/: TTP223.cpp  TTP223.h
sources/Reader/src/Reader/: Events.cpp  Events.h  Reader.cpp  Reader.h  Signals.cpp
sources/Reader/src/Reader/Cards/: AES.cpp  AES.h  Card.cpp  Card.h  Card14443.cpp  CardHiLvl.cpp  CardMF.cpp  CardMF.h  CardMFC.cpp  CardMFP.cpp  CardNTAG.cpp  CardNTAG.h  CardTasks.cpp  CardTasks.h  CardsEntities.h  TypeCard.cpp  TypeCard.h  transf.py
sources/Reader/src/Reader/RC663/: Commands.cpp  Commands.h  LPCD.cpp  LPCD.h  RC663.cpp  RC663.h  RC663_def.h  Registers.cpp  Registers.h
sources/Reader/src/Settings/: SET2.cpp  SET2.h  Settings.cpp  Settings.h  SettingsTypes.h
sources/Reader/src/Utils/: Averager.h  Buffer.h  Debug.cpp  Debug.h  Hysteresis.h  Log.cpp  Log.h  Math.cpp  Math.h  RingBuffer.cpp  RingBuffer.h  StackFILO.h  String.h  StringUtils.cpp  StringUtils.h
sources/Reader/vs_keil771/: CMakeLists.txt
sources/Reader/vs_keil777/: CMakeLists.txt
sources/Reader/vs_keil799/: CMakeLists.txt
sources/Reader/vs_keilDemo799/: CMakeLists.txt
sources/Reader/vs_keilDemo799/Device/: Device_demo.cpp
sources/Reader/vs_keilDemo799/Modules/Indicator/: Indicator_demo.cpp
sources/Reader/vs_keilDemo799/Modules/Indicator/Scripts/: ScriptsLED_demo.cpp
sources/Reader/vs_keilDemo799/Reader/RC663/: RC663_demo.cpp
sources/common/GD32E23x_Demo_Suites_V2.4.0/GD32E230C_EVAL_Demo_Suites/: change log.txt
sources/common/GD32E23x_Demo_Suites_V2.4.0/GD32E230C_EVAL_Demo_Suites/Projects/01_GPIO_Running_LED/: main.c
sources/common/GD32E23x_Demo_Suites_V2.4.0/GD32E230C_EVAL_Demo_Suites/Projects/02_GPIO_Key_Polling_mode/: main.c
sources/common/GD32E23x_Demo_Suites_V2.4.0/GD32E230C_EVAL_Demo_Suites/Projects/04_USART_Printf/: main.c
sources/common/GD32E23x_Demo_Suites_V2.4.0/GD32E230C_EVAL_Demo_Suites/Projects/05_USART_HyperTerminal_Interrupt/: main.c
sources/common/GD32E23x_Demo_Suites_V2.4.0/GD32E230C_EVAL_Demo_Suites/Projects/06_USART_DMA/: main.c
sources/common/GD32E23x_Demo_Suites_V2.4.0/GD32E230C_EVAL_Demo_Suites/Projects/09_I2C_EEPROM/: main.c  systick.h
sources/common/GD32E23x_Demo_Suites_V2.4.0/GD32E230C_EVAL_Demo_Suites/Projects/10_SPI_Quad_Flash/: main.c
sources/common/GD32E23x_Demo_Suites_V2.4.0/GD32E230C_START_Demo_Suites/: change log.txt
sources/common/GD32E23x_Demo_Suites_V2.4.0/GD32E230F_START_Demo_Suites/: change log.txt
sources/common/GD32E23x_Demo_Suites_V2.4.0/GD32E230G_START_Demo_Suites/: change log.txt
sources/common/GD32E23x_Demo_Suites_V2.4.0/GD32E230K_START_Demo_Suites/: change log.txt
sources/common/GD32E23x_Demo_Suites_V2.4.0/GD32E230V_START_Demo_Suites/: change log.txt
sources/common/GD32E23x_Demo_Suites_V2.4.0/GD32E231K_EVAL_Demo_Suites/: change log.txt
sources/common/GD32E23x_Demo_Suites_V2.4.0/GD32E231K_EVAL_Demo_Suites/Projects/04_USART_Printf/: main.c
sources/common/GD32E23x_Demo_Suites_V2.4.0/GD32E235C_EVAL_Demo_Suites/: change log.txt
sources/common/GD32E23x_Demo_Suites_V2.4.0/GD32E235F_START_Demo_Suites/: change log.txt
sources/common/GD32E23x_Demo_Suites_V2.4.0/GD32E235G_START_Demo_Suites/: change log.txt
sources/common/GD32E23x_Demo_Suites_V2.4.0/GD32E235K_START_Demo_Suites/: change log.txt
sources/common/GD32E23x_Demo_Suites_V2.4.0/GD32E235V_START_Demo_Suites/: change log.txt
sources/common/GD32E23x_Demo_Suites_V2.4.0/GD32E23x_Firmware_Library/: readme.txt
sources/common/_VS_KEIL/std_includes/: cmath  cstdarg  cstdio  cstdlib  cstring  ctime  integer.h  stdint.h  stdio.h  string.h
sources/scripts/: promt.bat
sources/scripts/Keil/: edit.bat
sources/scripts/vs_keil/: assembly.bat  edit.bat
(+298 files in other folders)
